Import 10 product images from public/products and update products.json (auto-mapping)

--- a/netlify.toml
+++ b/netlify.toml
@@ -8,7 +8,7 @@
 [functions]
   directory = "netlify/functions"
 
-[redirects]
+[[_redirects]]
 # pass-through for Next static assets (plugin handles most routing)
   [[redirects]]
   from = "/_next/*"
